// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-chip Renders \`c-alarm-chip\` with custom props 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      stealthy
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            3
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with default props 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      ok
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
        >
          <span
            class="px-1"
          >
            0
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: ack 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            ack20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: ackRemove 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            ackremove20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: assocTicket 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            assocticket20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionAlreadyRunning 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            autoinstructionalreadyrunning20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            autoinstructioncomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            autoinstructionfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: autoInstructionStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            autoinstructionstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: cancel 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            cancel20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: changeState 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            changestate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: check 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            check20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: comment 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            comment20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: createManualMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            createManualMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: declareTicket 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            declareticket20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: declareTicketFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            declareticketfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: delete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            delete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: executeInstruction 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            executeInstruction20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: fastAck 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            fastAck20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: group 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            group20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionAbort 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionabort20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructioncomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobAbort 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionjobabort20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionjobcomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionjobfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionJobStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionjobstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionPause 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionpause20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionResume 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionresume20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: instructionStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            instructionstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: invalidate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            invalidate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: junitTestCaseUpdate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            junittestcaseupdate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: junitTestSuiteUpdate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            junittestsuiteupdate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: metaalarmattach 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            metaalarmattach20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pause 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            pause20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbehaviorAdd 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            pbehaviorAdd20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbehaviorList 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            pbehaviorList20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbhenter 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            pbhenter20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: pbhleave 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            pbhleave20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: play 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            play20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: removeAlarmsFromAutoMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            removeAlarmsFromAutoMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: removeAlarmsFromManualMetaAlarm 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            removeAlarmsFromManualMetaAlarm20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: snooze 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            snooze20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statedec 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            statedec20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: stateinc 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            stateinc20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statusdec 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            statusdec20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: statusinc 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            statusinc20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: uncancel 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            uncancel20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: unsooze 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            unsooze20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: validate 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            validate20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookComplete 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            webhookcomplete20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookFail 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            webhookfail20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with state: webhookStart 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
      style="background-color: rgb(0, 0, 0);"
    >
      Invalid val
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            webhookstart20
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: cancelled 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      cancelled
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            14
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: closed 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      closed
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            10
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: flapping 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      flapping
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            13
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: noEvents 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      no events
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            15
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: ongoing 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      ongoing
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            11
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;

exports[`c-alarm-chip Renders \`c-alarm-chip\` with status: stealthy 1`] = `
<div
  class="chip-container"
>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <span
      class="chip"
    >
      stealthy
    </span>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge secondary"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
        >
          <span
            class="px-1"
          >
            12
          </span>
        </span>
      </transition-stub>
    </span>
  </span>
</div>
`;
